--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="login_label">Log in</string>
     <string name="title_activity_timeline">Timeline</string>
+  <string name="default_body_text">This is the tweet body</string>
+  <string name="default_user_name_text">\@foo</string>
 
 </resources>
